SERVER-75922 Fall back to old format partial index entry removal if an entry in the new format is not found in the index